--- a/SchISOEngine/SchISOEngine.vcxproj.filters
+++ b/SchISOEngine/SchISOEngine.vcxproj.filters
@@ -24,4 +24,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="module.def">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
